--- a/subscribe/config/config.json
+++ b/subscribe/config/config.json
@@ -180,7 +180,7 @@
     },
     "storage": {
         "engine": "gist",
-        "token": "",
+        "token": "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",
         "base": "https://api.github.com",
         "domain": "https://gist.github.com",
         "items": {
