--- a/subscribe/config/config.json
+++ b/subscribe/config/config.json
@@ -1,219 +1,20 @@
 {
-    "domains": [
-        {
-            "name": "MyPrivateSub_Placeholder",
-            "sub": [
-                "https://example.com/your/private/sub/link"
-            ],
-            "domain": "",
-            "enable": false,
-            "rename": "",
-            "include": "",
-            "exclude": "",
-            "push_to": [
-                "MyProxies"
-            ],
-            "ignorede": true,
-            "liveness": true,
-            "rate": 2.5,
-            "count": 1,
-            "coupon": "",
-            "secure": false,
-            "renew": {
-                "account": [
-                    {
-                        "email": "",
-                        "passwd": "",
-                        "ticket": {
-                            "enable": true,
-                            "autoreset": false,
-                            "subject": "",
-                            "message": "",
-                            "level": 1
-                        }
-                    }
-                ],
-                "plan_id": 3,
-                "package": "",
-                "method": 1,
-                "coupon_code": "",
-                "chatgpt": {
-                    "enable": true,
-                    "regex": "",
-                    "operate": "IN"
-                }
-            }
-        }
-    ],
-    "crawl": {
-        "enable": true,
-        "exclude": "过期|停用|维护",
-        "threshold": 5,
-        "singlelink": true,
-        "persist": {
-            "subs": "crawledsubs",
-            "proxies": "crawledproxies"
-        },
-        "config": {
-            "rename": "",
-            "include": "",
-            "exclude": "",
-            "xxxxxxx": ""
-        },
-        "airport_discovery": {
-            "enable": true,
-            "channel": "jichang_list",
-            "pages": 20,
-            "rigid": true,
-            "chuck": false,
-            "push_to": [
-                "MyProxies"
-            ],
-            "persist": {
-                "domains": "discovered-airports.txt"
-            }
-        },
-        "telegram": {
-            "enable": true,
-            "pages": 20,
-            "exclude": "",
-            "users": {
-                "channel": {
-                    "include": "",
-                    "exclude": "",
-                    "config": {
-                        "rename": "",
-                        "xxxxxx": ""
-                    },
-                    "push_to": [ "MyProxies"]
-                }
-            }
-        },
-        "google": {
-            "enable": false,
-            "exclude": "",
-            "notinurl": [],
-            "push_to": []
-        },
-        "github": {
-            "enable": true,
-            "pages": 20,
-            "push_to": [
-                "MyProxies"
-            ],
-            "exclude": "",
-            "spams": []
-        },
-        "twitter": {
-            "enable": false,
-            "users": {
-                "username": {
-                    "enable": true,
-                    "num": 30,
-                    "include": "",
-                    "exclude": "",
-                    "config": {
-                        "rename": "",
-                        "xxxxxx": ""
-                    },
-                    "push_to": []
-                }
-            }
-        },
-        "repositories": [
-            {
-                "enable": false,
-                "username": "",
-                "repo_name": "",
-                "commits": 3,
-                "exclude": "",
-                "push_to": []
-            }
-        ],
-        "pages": [
-            {
-                "enable": true,
-                "url": "",
-                "include": "",
-                "exclude": "",
-                "config": {
-                    "rename": ""
-                },
-                "push_to": []
-            }
-        ],
-        "scripts": [
-            {
-                "enable": false,
-                "script": "file#function",
-                "params": {
-                    "persist": {
-                        "fileid": ""
-                    },
-                    "any": "xxx",
-                    "config": {
-                        "enable": true,
-                        "liveness": true,
-                        "exclude": "",
-                        "rename": "",
-                        "push_to": []
-                    }
-                }
-            }
-        ]
-    },
-    "groups": {
-        "MyProxies": {
-            "emoji": true,
-            "list": true,
-            "targets": {
-                "clash": "MyClashProfile",
-                "singbox": "MySingboxProfile",
-                "v2ray": "MyV2rayProfile"
-            },
-            "regularize": {
-                "enable": true,
-                "locate": true,
-                "bits": 2
-            }
-        }
-    },
-    "storage": {
-        "engine": "gist",
-        "token": "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",
-        "base": "https://api.github.com",
-        "domain": "https://gist.github.com",
-        "items": {
-            "MyClashProfile": {
-                "username": "ma3344",
-                "gistid": "977bb8e693897f402077a6bc792b8509",
-                "filename": "clash.yaml"
-            },
-            "MySingboxProfile": {
-                "username": "ma3344",
-                "gistid": "977bb8e693897f402077a6bc792b8509",
-                "filename": "singbox.json"
-            },
-            "MyV2rayProfile": {
-                "username": "ma3344",
-                "gistid": "977bb8e693897f402077a6bc792b8509",
-                "filename": "v2ray.txt"
-            },
-            "crawledsubs": {
-                "username": "ma3344",
-                "gistid": "977bb8e693897f402077a6bc792b8509",
-                "filename": "crawled-subs.txt"
-            },
-            "crawledproxies": {
-                "username": "ma3344",
-                "gistid": "977bb8e693897f402077a6bc792b8509",
-                "filename": "crawled-proxies.yaml"
-            },
-            "discovered-airports.txt": {
-                "username": "ma3344",
-                "gistid": "977bb8e693897f402077a6bc792b8509",
-                "filename": "discovered-airports.txt"
-            }
-        }
+  "groups": {
+    "MyProxies": {
+      "targets": { "clash": "MyClashProfile" }
     }
+  },
+  "storage": {
+    "engine": "gist",
+    "token": "你的ClassicToken",
+    "base": "https://api.github.com",
+    "domain": "https://gist.github.com",
+    "items": {
+      "MyClashProfile": {
+        "username": "ma3344",
+        "gistid": "977bb8e693897f402077a6bc792b8509",
+        "filename": "clash.yaml"
+      }
+    }
+  }
 }
