--- a/.github/workflows/process.yaml
+++ b/.github/workflows/process.yaml
@@ -14,6 +14,8 @@ env:
 
   # token
   PUSH_TOKEN: ${{ secrets.PUSH_TOKEN }}
+  GH_TOKEN: ${{ secrets.GH_TOKEN}}
+
 
   # network reachable
   REACHABLE: ${{ vars.REACHABLE }}
