--- a/.github/workflows/process.yaml
+++ b/.github/workflows/process.yaml
@@ -14,6 +14,7 @@ env:
 
   # token
   PUSH_TOKEN: ${{ secrets.PUSH_TOKEN }}
+  GH_TOKEN: ${{ secrets.GIST_PAT }}
 
   # network reachable
   REACHABLE: ${{ vars.REACHABLE }}
