--- a/subscribe/config/config.json
+++ b/subscribe/config/config.json
@@ -63,7 +63,7 @@
         "airport_discovery": {
             "enable": true,
             "channel": "jichang_list",
-            "pages": 40,
+            "pages": 50,
             "rigid": true,
             "chuck": false,
             "push_to": [
@@ -78,14 +78,16 @@
             "pages": 40,
             "exclude": "",
             "users": {
-                "channel": {
+                "channel": "jichang_list"，{
                     "include": "",
                     "exclude": "",
                     "config": {
                         "rename": "",
                         "xxxxxx": ""
                     },
-                    "push_to": [ "MyProxies"]
+                    "push_to": [ 
+                        "MyProxies"
+                ]
                 }
             }
         },
@@ -97,7 +99,7 @@
         },
         "github": {
             "enable": true,
-            "pages": 40,
+            "pages": 50,
             "push_to": [
                 "MyProxies"
             ],
