--- a/subscribe/config/config.json
+++ b/subscribe/config/config.json
@@ -78,7 +78,7 @@
             "pages": 50,
             "exclude": "",
             "users": {
-                "channel": "jichang_list" {
+                "channel": "jichang_list", {
                     "include": "",
                     "exclude": "",
                     "config": {
