--- a/.github/workflows/process.yaml
+++ b/.github/workflows/process.yaml
@@ -51,7 +51,7 @@ jobs:
         run: pip3 install -r requirements.txt
 
       - name: Process
-        run: python subscribe/process.py -s subscribe/config/config.json -n 128 -t 10000
+        run: python subscribe/process.py -s subscribe/config/config.json -n 32 -t 8000 --flexible
 
       - name: Timestamp
         run: date
